--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1766,6 +1766,54 @@ section.lazy-placeholder:after {
 .cid-tG9ENHX7TI .progressbar-number {
   word-break: normal;
 }
+.cid-tkRjl6yCle {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background: linear-gradient(45deg, #1a1818, #33aad3);
+}
+.cid-tkRjl6yCle .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-tkRjl6yCle H2 {
+  text-align: left;
+}
+.cid-tkRjIQE43P {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-tkRjIQE43P .counter-container {
+  color: #767676;
+}
+.cid-tkRjIQE43P .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-tkRjIQE43P .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-tkRjIQE43P .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+  position: relative;
+}
+.cid-tkRjIQE43P .counter-container ol li:before {
+  position: absolute;
+  left: -56px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #33aad3;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 .cid-tkRjSOcMSG {
   padding-top: 90px;
   padding-bottom: 90px;
