--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1779,7 +1779,7 @@ section.lazy-placeholder:after {
 }
 .cid-tkRjIQE43P {
   padding-top: 45px;
-  padding-bottom: 30px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-tkRjIQE43P .counter-container {
@@ -1814,9 +1814,12 @@ section.lazy-placeholder:after {
   height: 40px;
   border-radius: 50%;
 }
+.cid-tkRjIQE43P .mbr-text {
+  text-align: left;
+}
 .cid-tkRjSOcMSG {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #efefef;
 }
 .cid-tkRjSOcMSG .mbr-section-subtitle {
