--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4537,7 +4537,7 @@ section.lazy-placeholder:after {
 }
 .cid-tGOXJh5bxx {
   padding-top: 0px;
-  padding-bottom: 45px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-tGOXJh5bxx .mbr-text,
@@ -4546,6 +4546,14 @@ section.lazy-placeholder:after {
 }
 .cid-tGOXJh5bxx .mbr-text P {
   text-align: center;
+}
+.cid-tH73OWs3uI {
+  padding-top: 15px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-tH73OWs3uI P {
+  color: #767676;
 }
 .cid-rsuBHALgLh {
   padding-top: 45px;
